refactor(api): ♻️ 重构集群框架管理模块
按照三层架构规范对FrameInfo模块进行全面重构：
1. 引入DTO/VO对象（FrameInfoDTO/FrameInfoVO）进行数据传递
2. 添加FrameInfoConverter实现对象转换
3. 重构Controller使用RESTful风格
4. 优化Service层实现，使用QueryChain简化查询
5. 增强异常处理和数据校验逻辑

新增功能：
- 根据框架代码获取信息
- 显示名称自动生成逻辑
- 批量操作接口增强

代码质量提升：
- 使用Lombok简化代码
- 增加Swagger文档注解
- 遵循MyBatis-Flex最佳实践

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>